--- a/three-id/package.json
+++ b/three-id/package.json
@@ -22,7 +22,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "build:tailwind": "tailwindcss -c ./src/tailwind/tailwind.config.js -i ./src/tailwind/input.css -o ./src/tailwind/tailwind.css --no-autoprefixer && tailwind-rn",
+    "dev:tailwind": "concurrently \"tailwindcss -c ./src/tailwind/tailwind.config.js -i ./src/tailwind/input.css -o ./src/tailwind/tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "bugs": {
     "url": "https://github.com/kubelt/kubelt/issues"
@@ -51,6 +53,7 @@
     "react-native-screens": "3.11.1",
     "react-native-web": "0.17.7",
     "rxjs": "7.5.6",
+    "tailwind-rn": "4.2.0",
     "web3modal": "1.9.8",
     "webpack-dev-server": "3.11.0"
   },
@@ -58,7 +61,10 @@
     "@babel/core": "7.18.6",
     "@types/react": "17.0.21",
     "@types/react-native": "0.66.13",
+    "concurrently": "7.2.2",
     "expo-cli": "5.5.1",
+    "postcss": "8.4.14",
+    "tailwindcss": "3.1.6",
     "typescript": "4.7.4",
     "wrangler": "2.0.18"
   },
