--- a/apps/threeid/.dev.vars.example
+++ b/apps/threeid/.dev.vars.example
@@ -3,11 +3,11 @@ OORT_SCHEMA="http"
 OORT_PORT="80"
 
 DAPP_HOST="localhost"
-DAPP_PORT="9797"
+DAPP_PORT="31337"
 DAPP_SCHEMA="http"
 
 GALAXY_HOST="127.0.0.1"
-GALAXY_PORT="8787
+GALAXY_PORT="8787"
 GALAXY_SCHEMA="http"
 
 SESSION_SECRET="foobar"
