--- a/apps/threeid/package.json
+++ b/apps/threeid/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@datadog/browser-rum": "4.19.0",
     "@datadog/datadog-api-client": "^1.3.0",
+    "@esbuild-plugins/node-globals-polyfill": "0.1.1",
     "@headlessui/react": "1.6.6",
     "@heroicons/react": "2.0.10",
     "@kubelt/design-system": "*",
