--- a/apps/threeid/package.json
+++ b/apps/threeid/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "sideEffects": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test:units": "jest tests/units",
+    "test:e2e": "playwright test",
+    "test": "run-p 'test:*'",
     "build": "run-s \"build:*\"",
     "build:css": "npx tailwindcss -o ./app/styles/tailwind.css",
     "build:sass": "sass app/:app/ --no-source-map",
@@ -66,6 +68,7 @@
     "chromatic": "6.11.4",
     "concurrently": "7.3.0",
     "css-loader": "6.7.1",
+    "dotenv": "16.0.3",
     "eslint": "8.20.0",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.5.0",
@@ -77,6 +80,7 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-standard": "5.0.0",
+    "jest": "29.3.1",
     "miniflare": "2.6.0",
     "postcss": "8.4.19",
     "prettier": "2.7.1",
@@ -86,6 +90,7 @@
     "storybook-addon-sass-postcss": "0.1.3",
     "style-loader": "3.3.1",
     "tailwindcss": "3.1.8",
+    "ts-jest": "29.0.3",
     "typescript": "4.7.4",
     "webpack": "5.75.0",
     "wrangler": "2.4.4",
