--- a/platform/access/package.json
+++ b/platform/access/package.json
@@ -28,17 +28,19 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "typescript": "4.8.4",
-    "wrangler": "2.4.4"
+    "wrangler": "2.6.2"
   },
   "dependencies": {
     "@ethersproject/bytes": "5.7.0",
     "@ethersproject/random": "5.7.0",
     "@kubelt/openrpc": "workspace:*",
     "@kubelt/platform-clients": "workspace:*",
+    "@kubelt/platform-middleware": "workspace:*",
     "@kubelt/urns": "workspace:*",
     "@trpc/server": "10.7.0",
     "do-proxy": "1.3.1",
     "jose": "4.11.0",
-    "typed-json-rpc": "1.1.0"
+    "typed-json-rpc": "1.1.0",
+    "zod": "3.20.2"
   }
 }
